--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
+
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.android.support:appcompat-v7:23.1.0'
 }
+
+
+
