--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
-    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
-    implementation 'com.google.zxing:core:3.2.1'
-    implementation 'com.android.support:appcompat-v7:23.1.0'
+    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
 }
 
 
